<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.smartcalsvendingmachine.VendingMachineUI.Customer.CustomerSearch">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/calories"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:text="@string/from"
                android:padding="3dip" />
            <EditText
                android:id="@+id/calories_from"
                android:padding="3dip"
                android:ems="3"
                android:inputType="number"/>
            <TextView
                android:text="@string/to"
                android:padding="3dip" />
            <EditText
                android:id="@+id/calories_to"
                android:padding="3dip"
                android:ems="3"
                android:inputType="number"/>
            <TextView
                android:text="@string/ca_unit"
                android:padding="3dip"/>

        </TableRow>

        <TableRow
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/sugar"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:text="@string/from"
                android:padding="3dip" />
            <EditText
                android:id="@+id/sugar_from"
                android:padding="3dip"
                android:ems="3"
                android:inputType="number"/>
            <TextView
                android:text="@string/to"
                android:padding="3dip" />
            <EditText
                android:id="@+id/sugar_to"
                android:padding="3dip"
                android:ems="3"
                android:inputType="number"/>
            <TextView
                android:text="@string/gram"
                android:padding="3dip"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="#333333"
        android:textStyle="bold"
        android:background="@drawable/normal_btn_style"
        android:onClick="onClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#333333"
            android:textStyle="bold"
            android:background="@drawable/normal_btn_style"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#333333"
            android:textStyle="bold"
            android:background="@drawable/normal_btn_style"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>
