<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.smartcalsvendingmachine.VendingMachineUI.EmployeeUI.RegisterItemNumbers">

    <TableLayout
        android:id="@+id/item_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow>
            <TextView
                android:layout_weight="1"
                android:text="@string/table_code_text"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:layout_weight="1"
                android:text="@string/table_name_text"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:layout_weight="1"
                android:text="@string/table_price_text"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:layout_weight="1"
                android:text="@string/table_capacity_text"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:layout_weight="1"
                android:text="@string/table_quantity_text"
                android:textStyle="bold"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textColor="#333333"
        android:textStyle="bold"
        android:background="@drawable/normal_btn_style"
        android:onClick="onClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#333333"
            android:textStyle="bold"
            android:background="@drawable/normal_btn_style"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#333333"
            android:textStyle="bold"
            android:background="@drawable/normal_btn_style"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>
