<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_server_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_ip"/>

    <EditText
        android:id="@+id/login_employee_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_id"
        android:inputType="number"/>

    <EditText
        android:id="@+id/login_employee_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_password"
        android:password="true"/>

    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="#333333"
        android:textStyle="bold"
        android:background="@drawable/normal_btn_style"
        android:onClick="onClick"/>

</LinearLayout>