<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.smartcalsvendingmachine.VendingMachineUI.CustomerUI.CustomerBuyCard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_card_sentence"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/card_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RadioButton
            android:id="@+id/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"/>

        <RadioButton
            android:id="@+id/twenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty"/>

        <RadioButton
            android:id="@+id/fifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty"/>

    </RadioGroup>

    <Button
        android:id="@+id/buy_it"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_it"
        android:textColor="#333333"
        android:textStyle="bold"
        android:background="@drawable/normal_btn_style"
        android:onClick="onClick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#333333"
            android:textStyle="bold"
            android:background="@drawable/normal_btn_style"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#333333"
            android:textStyle="bold"
            android:background="@drawable/normal_btn_style"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>
